<resources>
    <string name="app_name">АМО лабораторні 4&#8211;5</string>
    <string name="boundaries">Проміжок для пошуку кореня</string>
    <string name="min">Мінімальне</string>
    <string name="max">Максимальне</string>
    <string name="epsilon">Введіть ε</string>
    <string name="epsilon_symbol">ε</string>
    <string name="calculate">Провести пошук кореня</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="lab4Activity">Лабораторна №4</string>
    <string name="lab5Activity">Лабораторна №5</string>
    <!--<string name="function_select">Виберіть функцію для інтерполяції</string>-->
    <!--<string name="interpolation_range">Виберіть проміжок для інтерполяції</string>-->
    <!--<string name="min_range">Мінімальне</string>-->
    <!--<string name="max_range">Максимальне</string>-->
    <!--<string name="key_pts">Кількість ключових точок</string>-->
    <!--<string name="interpolate">Інтерполювати функцію</string>-->
    <!--<string name="infelicity">Абсолютна похибка:</string>-->
    <!--<string-array name="drop_list">-->
    <!--<item>sin x</item>-->
    <!--<item>e<sup>-(x+sin x)</sup></item>-->
    <!--</string-array>-->
</resources>
