<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            tools:context=".TabActivity1Lab4"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:background="@color/colorBackgroundFloating">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/boundaries"
                android:layout_width="308dp"
                android:layout_height="0dp"
                android:id="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                android:textColor="@color/text_color" android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:gravity="center" android:fontFamily="casual"/>
        <TextView
                android:text="@string/epsilon"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textColor="@color/text_color" android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:gravity="center" android:fontFamily="casual"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/minInput"/>
        <EditText
                android:layout_width="139dp"
                android:layout_height="0dp"
                android:inputType="numberSigned|numberDecimal"
                android:ems="10"
                android:id="@+id/minInput"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/min"/>
        <EditText
                android:layout_width="139dp"
                android:layout_height="42dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/epsilonInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="100dp"
                android:layout_marginStart="100dp"
                android:hint="@string/epsilon_symbol"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
        />
        <EditText
                android:layout_width="139dp"
                android:layout_height="0dp"
                android:inputType="numberSigned|numberDecimal"
                android:ems="10"
                android:id="@+id/maxInput" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:hint="@string/max"
                app:layout_constraintStart_toEndOf="@+id/minInput"
                android:layout_marginLeft="33dp" android:layout_marginStart="33dp"/>
        <Button
                android:text="@string/calculate"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:onClick="btnOnClick"
                android:id="@+id/button" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/epsilonInput" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="68dp" android:layout_marginStart="68dp"
                android:textColor="@color/text_color" android:textAllCaps="true"
                android:backgroundTint="@android:color/white"
        />
        <com.jjoe64.graphview.GraphView
                android:layout_width="310dp"
                android:layout_height="291dp"
                android:id="@+id/graph"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/button"
                android:visibility="visible"
        />


    </android.support.constraint.ConstraintLayout>

</ScrollView>